# SalesForecasting_with_FastAPI

./: README.md  config.py  main.py  pyproject.toml
core/: server.py
core/logger/: log_viewer.html
core/utils/: utils.py
modules/LLM/: LLM_analyzer.py  prompt.py
modules/ORM/: models.py  orm.py  run_query.py
modules/data/: SummaryStats.py  data_prep.py
modules/data/sql_queries/analytical_queries/: monthlySales.py
modules/data/sql_queries/per_tbl_query/: customers.py  order_details.py  orders.py  products.py
modules/models/: Arima.py  Prophet.py  XG_boost.py  modelSchema.py  predict.py
