[project]
name = "FastStart"
version = "1.0.0"
description = "Base file structure of fast api"
license = "MIT"
authors = [
    {name = "mubashir-ahmed", email = "mubashirsidiki@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.11,<3.12"
dependencies = [
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "gunicorn (>=23.0.0,<24.0.0) ; sys_platform == \"linux\"",
    "openai (>=1.78.1,<2.0.0)",
    "api-analytics[fastapi]>=1.2.7",
]