[project]
name = "FastCrate"
version = "1.0.0"
description = "Base file structure of fast api"
license = "MIT"
authors = [
    {name = "mubashir-ahmed", email = "mubashirsidiki@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.11,<3.12"
dependencies = [
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "fastapi[standard]>=0.115.11,<0.116.0",
    "gunicorn (>=23.0.0,<24.0.0) ; sys_platform == \"linux\"",
    "openai (>=1.78.1,<2.0.0)",
    "api-analytics[fastapi]>=1.2.7",
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.3.3",
    "statsmodels>=0.14.5",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.2",
    "numpy>=2.3.3",
    "pmdarima>=2.0.4",
]
